# lol_pick_ml

./: .dockerignore  .gitignore  Dockerfile  LOGGING_ENHANCEMENT.md  README.md  README_minio.md  TODO  main.py  minio_requirements.txt  performance_test.py  pyproject.toml  requirements.txt  test.py  test_advanced_detection.py  test_champion_detection.py
.devcontainer/: devcontainer.json  docker-compose.yml
api/: champion_detection_api.py
app/: api.py  champion_detector.py  logging_config.py  message_handler.py  model.py  model_manager.py  performance_monitor.py  predictor.py  schemas.py  vector_pool.py
examples/: multipliers_example.py
minio/: README_lol_storage.md  lol_data_storage_example.py  minio_client.py  minio_example.py
minio_storage/: __init__.py  lol_data_storage.py  minio_client.py  replacer.py
templatematching/: background_detector.py  champion_detector.py  detection_pipeline.py  enhanced_ocr_detector.py  ocr_image_preprocessor.py  ocr_text_detector.py  template_analyzer.py  template_image.py
test/: recognize.http  training.http
train/: dataReader.py  fetcher.py  train.py  trainer.py
