[project]
name = "lol-pick-ml"
version = "0.1.0"
description = ""
authors = [
    {name = "Gaibler",email = "patrick.giessler@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=1.26.0,<1.26.4)",
    "tensorflow (>=2.16.0,<2.16.2)",
    "keras (>=3.10.0,<4.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "datetime (>=5.5,<6.0)",
    "minio (>=7.2.15,<8.0.0)",
    "urllib3 (>=2.5.0,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pika (>=1.3.2,<2.0.0)",
    "fastapi (>=0.115.13,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
